[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigeo"
version = "1.0"
requires-python = ">= 3.12"
description = "Google Street View location guesser AI"
readme = "README.md"
dependencies = [
    "aiohttp",
    "orjson",
    "tqdm",
    "pillow",
    "numpy",
]

[project.optional-dependencies]
torch = [
  "torch==2.6.0",
  "torchvision==0.21.0",
]

[project.scripts]
gpano-load = "aigeo.gpano.load:main"
gpano-sample = "aigeo.gpano.sample:main"
aigeo-inference = "aigeo.ai.inference:main"

# [tool.hatch.metadata]
# allow-direct-references = true
