[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigeo"
version = "1.0"
requires-python = ">= 3.12"
description = "Google Street View location guesser AI"
readme = "README.md"
dependencies = [
    "aiohttp",
    "orjson",
    "tqdm",
    "pillow",
    "numpy",
]

[project.optional-dependencies]
torch = [
  "torch==2.6.0",
  "torchvision==0.21.0",
]

[project.scripts]
aigeo = "aigeo.cli.__main__:main"

[tool.ruff]
line-length = 120
